checkbox for transaction final check - part 1

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -24,14 +24,15 @@
                 <form wicket:id="form">
                     <div class="row">
                         <div class="span10 well">
-                            <div wicket:id="bc"/>
+                            <div wicket:id="bc"/>                            
                             <input wicket:id="submit" type="button"/>
                             <input wicket:id="save" type="button"/>
                             <input wicket:id="cancel" type="button"/>
+                            <wicket:child/>
                         </div>
                     </div>
                 </form>	
-                <span wicket:id="feedback">feedback</span>
+                <span wicket:id="feedback">feedback</span>             
             </div>
         </div>
     </div>
