more footer fixes

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -26,7 +26,7 @@
 	    <wicket:container wicket:id="footer-container"/>
     </div>
     <footer id="footer">
-                <div style="text-align: center;">
+                <div>
 					<img style="width:80 ;height: auto;" src="/images/ec-logo-english.gif"/>
 					<p>					
 					Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014)<br/>
