--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -24,18 +24,28 @@
                 <form wicket:id="form">
                     <div class="row">
                         <div class="span10 well">
-                            <div wicket:id="bc"/>                            
-                            <input wicket:id="submit" type="button"/>
-                            <input wicket:id="save" type="button"/>
-                            <input wicket:id="cancel" type="button"/>
-                            <wicket:child/>
+                            <div wicket:id="bc"/>
+                            <div class="row">
+                                <div class="span10">
+                                    &nbsp;
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="span10">
+                                    <wicket:child/>
+                                    <input wicket:id="submit" type="button"/>
+                                    <input wicket:id="save" type="button"/>
+                                    <input wicket:id="cancel" type="button"/>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </form>	
-                <span wicket:id="feedback">feedback</span>             
+                </form>
+                <span wicket:id="feedback">feedback</span>
             </div>
         </div>
     </div>
 </wicket:extend>
 </body>
-</html>                                                   1
+</html>
