refactor wicket dashboards components.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -9,6 +9,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:head>
+	<title>Dashboards page</title>
+
     <!-- load CDF libs css files -->
     <link href="/js/theme/cupertino/jquery-ui-1.8.custom.css" rel="stylesheet" type="text/css"/>
     <link href="/js/addIns/coltypes.css" rel="stylesheet" type="text/css"/>
