quick version in footer

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -31,6 +31,7 @@
 					<p>					
 					Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014)<br/>
 					Enhancing the ODA reporting capacities and systems of EU Member States<br/>
+					Version 0.9.0 BETA<br/>
                    </p>
                 </div>
      </footer>
