--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="span12">
-                &nbsp;
+                <span wicket:id="pageType"/>
             </div>
         </div>
     </div>
