Added transaction title for forms

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/crs/TransactionPage.html
@@ -14,13 +14,17 @@
     <div class="container">
         <div class="row">
             <div class="span12">
-                <span wicket:id="pageType"/>
+			&nbsp;
             </div>
         </div>
     </div>
     <div class="container">
+    
         <div class="row">
+         
             <div class="span10 offset1">
+                      <span class="transaction-title" wicket:id="pageType"/>
+                      <p/>
                 <form wicket:id="form">
                     <div class="row">
                         <div class="span10 well">
