improve dashboards components. make CDA queries configurable.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -50,7 +50,7 @@
                     <wicket:message key="dashboards.table"/>
                 </h2>
                 <div class="box">
-                    <div wicket:id="testTable"/>
+                    <div wicket:id="tableDashboard"/>
                 </div>
             </div>
 
