use multiple filters to update the dashboards.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -40,7 +40,7 @@
                 </h2>
                 <div class="box">
                     <div wicket:id="sectorFilter" />
-                    <div wicket:id="orgFilter" />
+                    <div wicket:id="extendingAgenciesFilter" />
 	                <div wicket:id="biMultilateralFilter" />
                 </div>
             </div>
