--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
   ~ Copyright (c) 2013 Development Gateway.
   ~ All rights reserved. This program and the accompanying materials
@@ -8,7 +7,7 @@
   ~ http://www.gnu.org/licenses/gpl.html
   ~
   ~ Contributors:
-  ~    aartimon
+  ~    aartimon, mihai
   -->
 <html wicket:id="html" xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <head>
