non flow panels for each non flow transaction

--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
@@ -21,10 +21,20 @@
         <div class="row">
             <div class="span8 offset2 well">
                 <form wicket:id="form">
-                    <div class="row">
-                    	<div wicket:id="reportingYearContainer">
+                    <div class="row">                    
                     		<div wicket:id="reportingYear"/>
-                    	</div>
+                    		<div wicket:id="populationContainer">
+                    			<div wicket:id="population"/>
+                    		</div>         
+                    		<div wicket:id="gniContainer">
+                    			<div wicket:id="gni"/>
+                    		</div>
+                    		<div wicket:id="totalFlowsContainer">
+                    			<div wicket:id="totalFlows"/>
+                    		</div>
+                    		<div wicket:id="odaOfGniContainer">
+                    			<div wicket:id="odaOfGni"/>
+                    		</div>                      		
                     </div>
                     <div class="row">
                         <div class="span4">
