--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
   ~ Copyright (c) 2013 Development Gateway.
   ~ All rights reserved. This program and the accompanying materials
@@ -7,7 +7,7 @@
   ~ http://www.gnu.org/licenses/gpl.html
   ~
   ~ Contributors:
-  ~    aartimon
+  ~    aartimon,mihai
   -->
 
 <html wicket:id="html" xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
@@ -15,6 +15,10 @@
     <meta charset="utf-8"/>
     <meta wicket:id="viewport"/>
     <meta wicket:id="chrome-frame"/>
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
 <div id="wrapper">
