--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -1,3 +1,11 @@
+<!--
+  ~ Copyright (c) 2014 Development Gateway.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the GNU Public License v3.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.gnu.org/licenses/gpl.html
+  -->
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
   ~ Copyright (c) 2013 Development Gateway.
@@ -30,15 +38,15 @@
 	    <wicket:container wicket:id="footer-container"/>
     </div>
     <footer id="footer">
-                <div>
-					<img style="width:80 ;height: auto;" src="/images/ec-logo-english.gif"/>
-					<p>					
-					Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014)<br/>
-					Enhancing the ODA reporting capacities and systems of EU Member States<br/>
-					Version 0.9.0 BETA<br/>
-                   </p>
-                </div>
-     </footer>
+        <div>
+            <img style="width: 80px; height: auto;" src="/images/ec-logo-english.gif"/>
+<p>
+    Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014)<br/>
+    Enhancing the ODA reporting capacities and systems of EU Member States<br/>
+    Version 0.9.0 BETA<br/>
+</p>
+</div>
+</footer>
 </div>     
 </body>
 </html>
