add new components to 'ODA at a Glance' page.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -32,13 +32,32 @@
 			<wicket:message key="dashboards.title"/>
         </h2>
 		</div>
-    	
+
         <div class="row">
-            <div class="span8 offset2">
+            <div class="span7">
                 <div class="box">
                     <div wicket:id="netODADashboard"/>
                 </div>
             </div>
+
+	        <div class="span5">
+			        <h2>By Income Group (USD m)</h2>
+	        </div>
+
+	        <div class="span6">
+		        <div class="box">
+			        <div wicket:id="topTenRecipients"/>
+			        <div class='removeHeader' wicket:id="topTenMemoShare"/>
+		        </div>
+	        </div>
+
+	        <div class="span6">
+		        <h2>By Region (USD m)</h2>
+	        </div>
+
+	        <div class="span12">
+		        <h2>By Sector</h2>
+	        </div>
 
             <div class="span12">
                 <h2>
