non field editing with validation, numbertextinputfields and numberinputfield (html5)

--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
@@ -23,6 +23,8 @@
                 <form wicket:id="form">
                     <div class="row">                    
                     		<div wicket:id="reportingYear"/>
+                   	</div>
+  					<div class="row">                    		
                     		<div wicket:id="populationContainer">
                     			<div wicket:id="population"/>
                     		</div>         
@@ -42,7 +44,7 @@
                         </div>
                     </div>
                 </form>
-
+ 				<span wicket:id="feedback">feedback</span>
             </div>
         </div>
     </div>
