improve 'ODA at a Glance' page.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -33,6 +33,16 @@
         </h2>
 		</div>
 
+	    <div>
+		    <div class="alert alert-info no-data">
+			    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <span>
+                    <h4>Warning</h4>
+	                <p>Some of the dashboards are not displayed due to the lack of data.</p>
+                </span>
+		    </div><!-- /alert -->
+	    </div>
+
         <div class="row">
             <div class="span7">
                 <div class="box">
