--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
@@ -18,6 +18,13 @@
         </div>
     </div>
     <div class="container">
+    <div class="row" align="center">
+        <h2>
+			<wicket:message key="nonflow.title"/>
+        </h2>
+		</div>
+    
+    
         <div class="row">
             <div class="span8 offset2 well">
                 <form wicket:id="form">
