--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditNonFlowItemsPage.html
@@ -30,6 +30,8 @@
                 <form wicket:id="form">
                     <div class="row">                    
                     		<div wicket:id="reportingYear"/>
+                    		<div wicket:id="reportingCountry"/>
+                    		<div wicket:id="reportingCurrency"/>
                    	</div>
   					<div class="row">                    		
                     		<div wicket:id="populationContainer">
