ODAEU-25 wicket upgraded to 6.13.0, added DebugBar in development mode

--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -35,6 +35,7 @@
     Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014)<br/>
     Enhancing the ODA reporting capacities and systems of EU Member States<br/>
     Version <span wicket:id="eudevfin-version"/><br/>
+    <div wicket:id="dev"/>
 </p>
 </div>
 </footer>
