ODAEU-79 exchange rate editor

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.html
@@ -9,7 +9,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:head>
-	<title><wicket:message key="dashboards.title"/></title>
+	<title><wicket:message key="page.title"/></title>
 
     <!-- load CDF libs css files -->
     <link href="/js/theme/cupertino/jquery-ui-1.8.custom.css" rel="stylesheet" type="text/css"/>
@@ -26,13 +26,6 @@
     <!-- used for loading animation instead of blockUI js library -->
 
     <div class="container">
-		<br/>
-		<div class="row" align="center">
-        <h2>
-			<wicket:message key="dashboards.title"/>
-        </h2>
-		</div>
-
 	    <div>
 		    <div class="alert alert-info no-data">
 			    <button type="button" class="close" data-dismiss="alert">&times;</button>
