--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/ListHistoricalExchangeRatePage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/ListHistoricalExchangeRatePage.html
@@ -7,8 +7,14 @@
   ~ http://www.gnu.org/licenses/gpl.html
   -->
 
-<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
-<properties>    
-    <entry key="button.addNewUser">Add New User</entry>
-    <entry key="page.title">Users List</entry>
-</properties>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<body>
+<wicket:extend>
+<form wicket:id="form">                 
+                  
+<input wicket:id="addNewRate" type="button"/>
+                    
+</form>
+</wicket:extend>
+</body>
+</html>                                                   
