--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditHistoricalExchangeRatePage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditHistoricalExchangeRatePage.html
@@ -13,28 +13,32 @@
 
     <div class="container">
         <div class="row">
+            <div class="span12">
+                &nbsp;
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
             <div class="span8 offset2 well">
                 <form wicket:id="form">
                     <div class="row">
-                        <div wicket:id="username"/>
-                        <div wicket:id="firstName"/>
-                        <div wicket:id="lastName"/>
-                        <div wicket:id="email"/>
-						<div wicket:id="group"/>     
-                        <div wicket:id="phone"/>
-                        <div wicket:id="password"/>
-                        <div wicket:id="enabled"/>
-                        <div wicket:id="persistedAuthorities"/>                        
+                        <div wicket:id="baseCurrency"/>
+                        <div wicket:id="counterCurrency"/>
+                        <div wicket:id="date"/>
+                        <div wicket:id="rate"/>
+                        <div wicket:id="source"/>
                     </div>
                     <div class="row">
                         <div class="span4">
-                            <input wicket:id="submit" type="button"/>
+                            <input wicket:id="submit" type="button"/>                            
                             <input wicket:id="cancel" type="button"/>
+                            <input wicket:id="delete" type="button"/>
                         </div>
                     </div>
                 </form>
-
-            </div>
+					<span wicket:id="feedback">feedback</span>				
+				</div>
         </div>
     </div>
 </wicket:extend>
