--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/LoginPage.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/LoginPage.html
@@ -32,7 +32,7 @@
                         <div wicket:id="username"/>
                         <div wicket:id="password"/>
                         <br/>
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>                        
+                        <input type="submit" class="btn btn-primary btn-block" value="Submit"/>                        
                     </form>
                 </div>
             </div>
