--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/LoginPage.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/LoginPage.html
@@ -14,6 +14,8 @@
 <head>
     <wicket:message key="login.title" />
 </head>
+
+
 <body>
     <wicket:extend>
         <header class="eubanner subhead" id="overview">
@@ -32,7 +34,7 @@
                         <div wicket:id="username"/>
                         <div wicket:id="password"/>
                         <br/>
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>                        
+                        <input wicket:id="submit" type="submit" class="btn btn-primary btn-block"/>                        
                     </form>
                 </div>
             </div>
