--- a/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
+++ b/eudevfin/common-ui/src/main/resources/org/devgateway/eudevfin/ui/common/pages/HeaderFooter.html
@@ -39,8 +39,8 @@
     </div>
     <footer id="footer">
         <div>
-            <img style="width: 80px; height: auto;" src="/images/ec-logo-english.gif"/>
-<p>
+            <img style="width: 80px; height: auto;" wicket:id="eclogo" />
+	<p>
     Capacity-Building in the area of Development Cooperation Policy (Capacity Building Scheme VII 2013-2014)<br/>
     Enhancing the ODA reporting capacities and systems of EU Member States<br/>
     Version <span wicket:id="eudevfin-version"/><br/>
